[gd_scene load_steps=8 format=2]

[ext_resource path="res://imagens/UI.png" type="Texture" id=1]
[ext_resource path="res://scripts/main.gd" type="Script" id=2]
[ext_resource path="res://imagens/hats/bone.png" type="Texture" id=3]
[ext_resource path="res://imagens/color/brown.png" type="Texture" id=4]
[ext_resource path="res://sons/click.mp3" type="AudioStream" id=5]
[ext_resource path="res://scripts/done.gd" type="Script" id=6]
[ext_resource path="res://imagens/monkey.png" type="Texture" id=7]

[node name="Node2D" type="Node2D"]
scale = Vector2( 10, 10 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_right = 50.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1000, 1000 )
own_world = true
transparent_bg = true
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[node name="ColorRect2" type="ColorRect" parent="ViewportContainer/Viewport"]
margin_right = 50.0
margin_bottom = 50.0
rect_scale = Vector2( 20, 20 )
color = Color( 0.415686, 0.415686, 0.415686, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="corFoto" type="Sprite" parent="ViewportContainer/Viewport"]
position = Vector2( 500, 680 )
scale = Vector2( 20, 20 )
texture = ExtResource( 4 )

[node name="hatFoto" type="Sprite" parent="ViewportContainer/Viewport"]
position = Vector2( 500, 680 )
scale = Vector2( 20, 20 )
texture = ExtResource( 3 )

[node name="Monkey" type="Sprite" parent="ViewportContainer/Viewport"]
position = Vector2( 500, 500 )
scale = Vector2( 20, 20 )
texture = ExtResource( 7 )

[node name="hatRight" type="TextureButton" parent="ViewportContainer/Viewport"]
margin_left = 36.0
margin_top = 27.0
margin_right = 41.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hatLeft" type="TextureButton" parent="ViewportContainer/Viewport"]
margin_left = 7.0
margin_top = 27.0
margin_right = 12.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="colorLeft" type="TextureButton" parent="ViewportContainer/Viewport"]
margin_left = 7.0
margin_top = 34.0
margin_right = 12.0
margin_bottom = 39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="colorRight" type="TextureButton" parent="ViewportContainer/Viewport"]
margin_left = 36.0
margin_top = 34.0
margin_right = 41.0
margin_bottom = 39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="done" type="TextureButton" parent="ViewportContainer/Viewport"]
margin_left = 22.0
margin_top = 42.0
margin_right = 28.0
margin_bottom = 48.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_right = 50.0
margin_bottom = 50.0
color = Color( 0.415686, 0.415686, 0.415686, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cor" type="Sprite" parent="."]
position = Vector2( 25, 25 )
texture = ExtResource( 4 )

[node name="hat" type="Sprite" parent="."]
position = Vector2( 25, 25 )
texture = ExtResource( 3 )

[node name="Ui" type="Sprite" parent="."]
position = Vector2( 25, 25 )
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = 22.0
margin_top = 42.0
margin_right = 28.0
margin_bottom = 48.0
color = Color( 0, 0, 0, 0.282353 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="pressed" from="ViewportContainer/Viewport/hatRight" to="." method="_on_hatRight_pressed"]
[connection signal="pressed" from="ViewportContainer/Viewport/hatLeft" to="." method="_on_hatLeft_pressed"]
[connection signal="pressed" from="ViewportContainer/Viewport/colorLeft" to="." method="_on_colorLeft_pressed"]
[connection signal="pressed" from="ViewportContainer/Viewport/colorRight" to="." method="_on_colorRight_pressed"]
[connection signal="button_down" from="ViewportContainer/Viewport/done" to="ViewportContainer/Viewport/done" method="_on_done_button_down"]
[connection signal="button_up" from="ViewportContainer/Viewport/done" to="ViewportContainer/Viewport/done" method="_on_done_button_up"]
[connection signal="pressed" from="ViewportContainer/Viewport/done" to="." method="_on_done_pressed"]
